Fix admin table overflow when site title too large

--- a/less/admin-site.less
+++ b/less/admin-site.less
@@ -11,6 +11,9 @@
   word-wrap: break-word;
 }
 
+#ucms-contrib-results table tbody tr td {
+  word-wrap: break-word;
+}
 #ucms-contrib-results table tbody tr td:last-child {
   min-width: 122px;
 }
